Add scrum experience

--- a/CV-english.tex
+++ b/CV-english.tex
@@ -61,7 +61,7 @@
 	  
 	  \large{\textit{Embedded Software Intern in the Motion Control team}}
 	  \begin{itemize}
-	    \item \normalsize{Implementation of an EtherCAT protocol prototype in C}
+	    \item \normalsize{Implementation of an EtherCAT protocol prototype in C, both in Linux and Bare-Metal}
 	    \item \normalsize{Implementation of test code in Python}
 	    \item \normalsize{Succesful integration of the protocol with existing code}
 	    \item \normalsize{Development of getting started tutorials for new team members}
@@ -95,9 +95,10 @@
   \item Development of the test methodology and its documentation
   \item Implementation of buck and boost switch-mode converters
   \item Solar panels, switch-mode converters and load modeling using Matlab and Simscape
-  \item Participation in the project requirements definition
+  %\item Participation in the project requirements definition
   \item Participation in the project hardware development
-  \item Participation in the debugging of all modules \\
+  \item All activities were executed under Scrum methodology \\
+  %\item Participation in the debugging of all modules \\
 \end{itemize}
   
 \end{minipage}
