--- a/CV-portugues.tex
+++ b/CV-portugues.tex
@@ -61,9 +61,10 @@
   
   \large{\textit{Estagiário de Software Embarcado no time de Motion Control}}
   \begin{itemize}
-    \item \normalsize{Implementação de um protótipo do protocolo EtherCAT em linguagem C}
+    \item \normalsize{Implementação de um protótipo do protocolo EtherCAT em linguagem C, rodando tanto em Linux como Bare-Metal}
     \item \normalsize{Implementação de códigos de teste em Python}
     \item \normalsize{Integração do protocolo no código existente com sucesso}
+    \item \normalsize{Todas as atividades foram realizadas utilizando Scrum no gerenciamento}
   \end{itemize}
 }
 \end{minipage} \\ \\
@@ -96,7 +97,7 @@
   \item Modelagem dos painéis solares, conversores chaveados e cargas utilizando Matlab e Simscape
   \item Participação na definição dos requisitos do projeto
   \item Participação no desenvolvimento do hardware do projeto
-  \item Participação no debugging de todos os módulos do projeto \\
+  %\item Participação no debugging de todos os módulos do projeto \\
 \end{itemize}
   
 \end{minipage}
