Add Gertec experience

--- a/CV-english.tex
+++ b/CV-english.tex
@@ -46,9 +46,27 @@
 	\vspace{12.5pt}
 	\begin{adjustwidth}{\parindent}{0pt}
 	\begin{minipage}[t]{0.65\textwidth}
-	\large Current interests include low-level embedded software, close to the hardware, as well as development of the hardware itself, matching the experience acquired during my career. I'm also interested in high-level software and app development in Python and C\#. \\
+	\large I am currently interested in low-level embedded software and applications development in C, C++, C\#, Java and Python.\\
 
-	\Large{\textbf{Experiences}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \\
+  \Large{\textbf{Experiences}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \\
+  
+  \begin{minipage}[t]{0.2\textwidth}
+    \large{07/2019 - \\ Present}
+    \end{minipage}
+    \begin{minipage}[t]{0.8\textwidth}
+    {
+      \setlength{\parskip}{5.5pt}
+      \Large{\textbf{Gertec - São Paulo}}
+    
+      \large{\textit{Software Developer}}
+      \begin{itemize}
+        \item \normalsize{Embedded Software development for payment solutions in Linux and Android environments using C, C++ and Java}
+        \item \normalsize{Desktop applications development in C\#/.NET and WPF}
+        \item \normalsize{All activities were perfomed under Scrum methodology}
+      \end{itemize}
+    }
+  \end{minipage} \\ \\
+
 	\begin{minipage}[t]{0.2\textwidth}
 	\large{04/2018 - \\ 02/2019}
 	\end{minipage}
@@ -85,20 +103,10 @@
 }
 \begin{itemize}
   \item \normalsize{Development of the firmware for the microcontroller and several other integrated circuits in C}
-  \begin{itemize}
-    \item Usage of communication protocols (I\textsuperscript{2}C, SPI, UART, One-Wire)
-    \item Implementation of Maximum Power Point Tracking algorithms
-    \item Implementation of the task scheduler
-  \end{itemize}
   \item Development of the temperature control system for the nanosatellite batteries.
   \item Development of the voltage and current measurement circuits using amplifiers and ADCs
-  \item Development of the test methodology and its documentation
   \item Implementation of buck and boost switch-mode converters
   \item Solar panels, switch-mode converters and load modeling using Matlab and Simscape
-  %\item Participation in the project requirements definition
-  \item Participation in the project hardware development
-  \item All activities were executed under Scrum methodology \\
-  %\item Participation in the debugging of all modules \\
 \end{itemize}
   
 \end{minipage}
