--- a/CV-portugues.tex
+++ b/CV-portugues.tex
@@ -46,9 +46,25 @@
 \vspace{12.5pt}
 \begin{adjustwidth}{\parindent}{0pt}
 \begin{minipage}[t]{0.65\textwidth}
-\large Atualmente me interesso por software embarcado, de baixo nível, próximo ao hardware, assim como pelo desenvolvimento do próprio hardware, de acordo com a experiência adquirida durante minha carreira. Também me interesso por software de alto nível e desenvolvimento de aplicativos em Python e C\#. \\
+\large Atualmente me interesso por software embarcado e desenvolvimento de aplicativos nas linguagens C, C++, C\#, Python e Java.\\
 
-\Large{\textbf{Experiência}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \\
+\begin{minipage}[t]{0.2\textwidth}
+\large{07/2019 - \\ Atualmente}
+\end{minipage}
+\begin{minipage}[t]{0.8\textwidth}
+{
+  \setlength{\parskip}{5.5pt}
+  \Large{\textbf{Gertec - São Paulo}}
+
+  \large{\textit{Desenvolvedor de Software}}
+  \begin{itemize}
+    \item \normalsize{Desenvolvimento de Software Embarcado para soluções de pagamento em ambiente Linux e Android nas linguagens C, C++ e Java}
+    \item \normalsize{Desenvolvimento de aplicativos Desktop em C\#/.NET e WPF}
+    \item \normalsize{Todas as atividades foram realizadas utilizando Scrum no gerenciamento}
+  \end{itemize}
+}
+\end{minipage} \\ \\
+
 \begin{minipage}[t]{0.2\textwidth}
 \large{04/2018 - \\ 02/2019}
 \end{minipage}
@@ -85,19 +101,10 @@
 }
 \begin{itemize}
   \item \normalsize{Desenvolvimento do firmware para o microcontrolador e diversos outros circuitos integrados em linguagem C}
-  \begin{itemize}
-    \item Uso de protocolos de comunicação (I\textsuperscript{2}C, SPI, UART, One-Wire)
-    \item Implementação de algoritmos de Maximum Power Point Tracking
-    \item Implementação do escalonador de tarefas
-  \end{itemize}
   \item Desenvolvimento do controle de temperatura para as baterias do nanossatélite
   \item Desenvolvimento de circuitos de medição de corrente e tensão utilizando amplificadores e ADCs
-  \item Desenvolvimento da metodologia de testes e sua documentação
   \item Implementação de conversores chaveados para elevação ou diminuição de tensão
   \item Modelagem dos painéis solares, conversores chaveados e cargas utilizando Matlab e Simscape
-  \item Participação na definição dos requisitos do projeto
-  \item Participação no desenvolvimento do hardware do projeto
-  %\item Participação no debugging de todos os módulos do projeto \\
 \end{itemize}
   
 \end{minipage}
