--- a/CV-english.tex
+++ b/CV-english.tex
@@ -150,7 +150,7 @@
 \begin{minipage}[t]{0.25\textwidth}
   \raggedright
   \Large{\textbf{Personal Information}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \hspace{0pt} \\
-  \raisebox{-.2\height}{\includegraphics[scale=0.075]{home-icon.png}} \small{Bartolomeu de Gusmão Street, 371, Florianópolis, SC, Brazil} \\ \hspace{0pt} \\
+  \raisebox{-.2\height}{\includegraphics[scale=0.075]{home-icon.png}} \small{Professor Aprígio Gonzaga Street, 700, ap31 São Paulo, SP, Brazil} \\ \hspace{0pt} \\
   \raisebox{-.2\height}{\includegraphics[scale=0.075]{phone-icon.png}} \small{+55 48 99611-8470} \\ \hspace{0pt} \\
   \raisebox{-.2\height}{\includegraphics[scale=0.075]{email-icon.png}}
   \small{brunoeiterer@gmail.com} \\ \hspace{0pt} \\
