--- a/CV-portugues.tex
+++ b/CV-portugues.tex
@@ -148,7 +148,7 @@
 \begin{minipage}[t]{0.25\textwidth}
   \raggedright
   \Large{\textbf{Informações Pessoais}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \hspace{0pt} \\
-  \raisebox{-.2\height}{\includegraphics[scale=0.075]{home-icon.png}} \small{Rua Bartolomeu de Gusmão, 371, Florianópolis, SC, Brasil} \\ \hspace{0pt} \\
+  \raisebox{-.2\height}{\includegraphics[scale=0.075]{home-icon.png}} \small{Rua Professor Aprígio Gonzaga, 700, ap31, São Paulo, SP, Brasil} \\ \hspace{0pt} \\
   \raisebox{-.2\height}{\includegraphics[scale=0.075]{phone-icon.png}} \small{+55 48 99611-8470} \\ \hspace{0pt} \\
   \raisebox{-.2\height}{\includegraphics[scale=0.075]{email-icon.png}}
   \small{brunoeiterer@gmail.com} \\ \hspace{0pt} \\
