--- a/CV-english.tex
+++ b/CV-english.tex
@@ -172,6 +172,13 @@
  \begin{minipage}{0.3\textwidth}
    \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgblkcircle$ \\  \footnotesize{Fluent}
  \end{minipage} \\ \hspace{0pt} \\
+
+ \begin{minipage}{0.65\textwidth}
+  \small{French}
+ \end{minipage}
+ \begin{minipage}{0.3\textwidth}
+    \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
+ \end{minipage} \\ \hspace{0pt} \\
  
  \Large{\textbf{Programming}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \hspace{0pt} \\
  
@@ -196,13 +203,6 @@
    \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
  \end{minipage} \\ \hspace{0pt} \\
  
- \begin{minipage}{0.65\textwidth}
-   \small{Matlab}
- \end{minipage}
- \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
- \end{minipage} \\ \hspace{0pt} \\
- 
   \begin{minipage}{0.65\textwidth}
    \small{C\# .NET}
  \end{minipage}
@@ -216,6 +216,20 @@
   \begin{minipage}{0.3\textwidth}
 	\centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
   \end{minipage} \\ \hspace{0pt} \\
+
+  \begin{minipage}{0.65\textwidth}
+    \small{Java}
+    \end{minipage}
+    \begin{minipage}{0.3\textwidth}
+    \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
+  \end{minipage} \\ \hspace{0pt} \\
+
+  \begin{minipage}{0.65\textwidth}
+    \small{Matlab}
+  \end{minipage}
+  \begin{minipage}{0.3\textwidth}
+    \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
+  \end{minipage} \\ \hspace{0pt} \\
  
   \Large{\textbf{Skills}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \hspace{0pt} \\
   
@@ -223,7 +237,7 @@
    \small{Git}
  \end{minipage}
  \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Intermediate}
+   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgblkcircle$ \\  \footnotesize{Advanced}
  \end{minipage} \\ \hspace{0pt} \\
  
  \begin{minipage}{0.65\textwidth}
@@ -231,6 +245,13 @@
  \end{minipage}
  \begin{minipage}{0.3\textwidth}
    \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
+ \end{minipage} \\ \hspace{0pt} \\
+
+ \begin{minipage}{0.65\textwidth}
+  \small{SVN}
+ \end{minipage}
+ \begin{minipage}{0.3\textwidth}
+  \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
  \end{minipage} \\ \hspace{0pt} \\
  
  \begin{minipage}{0.65\textwidth}
