--- a/CV-portugues.tex
+++ b/CV-portugues.tex
@@ -48,6 +48,8 @@
 \begin{minipage}[t]{0.65\textwidth}
 \large Atualmente me interesso por software embarcado e desenvolvimento de aplicativos nas linguagens C, C++, C\#, Python e Java.\\
 
+\Large{\textbf{Experiência}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \\
+
 \begin{minipage}[t]{0.2\textwidth}
 \large{07/2019 - \\ Atualmente}
 \end{minipage}
@@ -170,6 +172,13 @@
  \begin{minipage}{0.3\textwidth}
    \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgblkcircle$ \\  \footnotesize{Fluente}
  \end{minipage} \\ \hspace{0pt} \\
+
+ \begin{minipage}{0.65\textwidth}
+   \small{Francês}
+ \end{minipage}
+ \begin{minipage}{0.3\textwidth}
+   \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Básico}
+ \end{minipage} \\ \hspace{0pt} \\
  
  \Large{\textbf{Programação}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \hspace{0pt} \\
  
@@ -194,13 +203,6 @@
    \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Básico}
  \end{minipage} \\ \hspace{0pt} \\
  
- \begin{minipage}{0.65\textwidth}
-   \small{Matlab}
- \end{minipage}
- \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Básico}
- \end{minipage} \\ \hspace{0pt} \\
- 
   \begin{minipage}{0.65\textwidth}
    \small{C\# .NET}
  \end{minipage}
@@ -214,6 +216,20 @@
   \begin{minipage}{0.3\textwidth}
 	\centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Básico}
   \end{minipage} \\ \hspace{0pt} \\
+
+  \begin{minipage}{0.65\textwidth}
+    \small{Java}
+  \end{minipage}
+  \begin{minipage}{0.3\textwidth}
+    \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Básico}
+  \end{minipage} \\ \hspace{0pt} \\
+
+  \begin{minipage}{0.65\textwidth}
+    \small{Matlab}
+  \end{minipage}
+  \begin{minipage}{0.3\textwidth}
+    \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Básico}
+  \end{minipage} \\ \hspace{0pt} \\
  
   \Large{\textbf{Habilidades}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \hspace{0pt} \\
   
@@ -221,11 +237,18 @@
    \small{Git}
  \end{minipage}
  \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Itermediário}
+   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgblkcircle$ \\  \footnotesize{Avançado}
  \end{minipage} \\ \hspace{0pt} \\
  
  \begin{minipage}{0.65\textwidth}
    \small{ClearCase}
+ \end{minipage}
+ \begin{minipage}{0.3\textwidth}
+   \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Básico}
+ \end{minipage} \\ \hspace{0pt} \\
+
+ \begin{minipage}{0.65\textwidth}
+   \small{SVN}
  \end{minipage}
  \begin{minipage}{0.3\textwidth}
    \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Básico}
