Fix line breaks

--- a/CV-english.tex
+++ b/CV-english.tex
@@ -258,14 +258,14 @@
    \small{MS Office}
  \end{minipage}
  \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Intermediate}
+   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{\mbox{Intermediate}}
  \end{minipage} \\ \hspace{0pt} \\
  
  \begin{minipage}{0.65\textwidth}
    \small{\LaTeX}
  \end{minipage}
  \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Intermediate}
+   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{\mbox{Intermediate}}
  \end{minipage} \\ \hspace{0pt} \\
  
  \begin{minipage}{0.65\textwidth}
