--- a/CV-portugues.tex
+++ b/CV-portugues.tex
@@ -258,14 +258,14 @@
    \small{MS Office}
  \end{minipage}
  \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Intermediário}
+   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{\mbox{Intermediário}}
  \end{minipage} \\ \hspace{0pt} \\
  
  \begin{minipage}{0.65\textwidth}
    \small{\LaTeX}
  \end{minipage}
  \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Intermediário}
+   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{\mbox{Intermediário}}
  \end{minipage} \\ \hspace{0pt} \\
  
  \begin{minipage}{0.65\textwidth}
