--- a/CV-english.tex
+++ b/CV-english.tex
@@ -46,7 +46,7 @@
 	\vspace{12.5pt}
 	\begin{adjustwidth}{\parindent}{0pt}
 	\begin{minipage}[t]{0.65\textwidth}
-	\large I am currently interested in low-level embedded software and applications development in C, C++, C\#, Java and Python.\\
+	\large I am currently interested software development in C, C++, C\#, Java and Python.\\
 
   \Large{\textbf{Experiences}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \\
   
@@ -62,6 +62,7 @@
       \begin{itemize}
         \item \normalsize{Embedded Software development for payment solutions in Linux and Android environments using C, C++ and Java}
         \item \normalsize{Desktop applications development in C\#/.NET and WPF}
+        \item \normalsize{Web applications development for JIRA and Confluence in Java, Spring and Spring Boot}
         \item \normalsize{All activities were perfomed under Scrum methodology}
       \end{itemize}
     }
@@ -106,7 +107,6 @@
   \item Development of the temperature control system for the nanosatellite batteries.
   \item Development of the voltage and current measurement circuits using amplifiers and ADCs
   \item Implementation of buck and boost switch-mode converters
-  \item Solar panels, switch-mode converters and load modeling using Matlab and Simscape
 \end{itemize}
   
 \end{minipage}
@@ -150,7 +150,7 @@
 \begin{minipage}[t]{0.25\textwidth}
   \raggedright
   \Large{\textbf{Personal Information}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \hspace{0pt} \\
-  \raisebox{-.2\height}{\includegraphics[scale=0.075]{home-icon.png}} \small{Professor Aprígio Gonzaga Street, 700, ap31 São Paulo, SP, Brazil} \\ \hspace{0pt} \\
+  \raisebox{-.2\height}{\includegraphics[scale=0.075]{home-icon.png}} \small{São Paulo, SP, Brazil} \\ \hspace{0pt} \\
   \raisebox{-.2\height}{\includegraphics[scale=0.075]{phone-icon.png}} \small{+55 48 99611-8470} \\ \hspace{0pt} \\
   \raisebox{-.2\height}{\includegraphics[scale=0.075]{email-icon.png}}
   \small{brunoeiterer@gmail.com} \\ \hspace{0pt} \\
@@ -188,16 +188,23 @@
  \begin{minipage}{0.3\textwidth}
    \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgblkcircle$ \\  \footnotesize{Advanced}
  \end{minipage} \\ \hspace{0pt} \\
+
+ \begin{minipage}{0.65\textwidth}
+	\small{C++}
+ \end{minipage}
+ \begin{minipage}{0.3\textwidth}
+	\centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Intermediate}
+ \end{minipage} \\ \hspace{0pt} \\
+
+  \begin{minipage}{0.65\textwidth}
+	\small{Java}
+  \end{minipage}
+  \begin{minipage}{0.3\textwidth}
+	\centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Intermediate}
+  \end{minipage} \\ \hspace{0pt} \\
  
   \begin{minipage}{0.65\textwidth}
    \small{Python}
- \end{minipage}
- \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
- \end{minipage} \\ \hspace{0pt} \\
- 
- \begin{minipage}{0.65\textwidth}
-   \small{C++}
  \end{minipage}
  \begin{minipage}{0.3\textwidth}
    \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
@@ -215,13 +222,6 @@
   \end{minipage}
   \begin{minipage}{0.3\textwidth}
 	\centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
-  \end{minipage} \\ \hspace{0pt} \\
-
-  \begin{minipage}{0.65\textwidth}
-    \small{Java}
-    \end{minipage}
-    \begin{minipage}{0.3\textwidth}
-    \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
   \end{minipage} \\ \hspace{0pt} \\
 
   \begin{minipage}{0.65\textwidth}
