--- a/CV-portugues.tex
+++ b/CV-portugues.tex
@@ -46,7 +46,7 @@
 \vspace{12.5pt}
 \begin{adjustwidth}{\parindent}{0pt}
 \begin{minipage}[t]{0.65\textwidth}
-\large Atualmente me interesso por software embarcado e desenvolvimento de aplicativos nas linguagens C, C++, C\#, Python e Java.\\
+\large Atualmente me interesso por desenvolvimento de software em geral nas linguagens C, C++, C\#, Python e Java.\\
 
 \Large{\textbf{Experiência}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \\
 
@@ -62,6 +62,7 @@
   \begin{itemize}
     \item \normalsize{Desenvolvimento de Software Embarcado para soluções de pagamento em ambiente Linux e Android nas linguagens C, C++ e Java}
     \item \normalsize{Desenvolvimento de aplicativos Desktop em C\#/.NET e WPF}
+    \item \normalsize{Desenvolvimento de aplicações Web para JIRA e Confluence em Java com Spring e Spring Boot}
     \item \normalsize{Todas as atividades foram realizadas utilizando Scrum no gerenciamento}
   \end{itemize}
 }
@@ -106,7 +107,6 @@
   \item Desenvolvimento do controle de temperatura para as baterias do nanossatélite
   \item Desenvolvimento de circuitos de medição de corrente e tensão utilizando amplificadores e ADCs
   \item Implementação de conversores chaveados para elevação ou diminuição de tensão
-  \item Modelagem dos painéis solares, conversores chaveados e cargas utilizando Matlab e Simscape
 \end{itemize}
   
 \end{minipage}
@@ -150,7 +150,7 @@
 \begin{minipage}[t]{0.25\textwidth}
   \raggedright
   \Large{\textbf{Informações Pessoais}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \hspace{0pt} \\
-  \raisebox{-.2\height}{\includegraphics[scale=0.075]{home-icon.png}} \small{Rua Professor Aprígio Gonzaga, 700, ap31, São Paulo, SP, Brasil} \\ \hspace{0pt} \\
+  \raisebox{-.2\height}{\includegraphics[scale=0.075]{home-icon.png}} \small{São Paulo, SP, Brasil} \\ \hspace{0pt} \\
   \raisebox{-.2\height}{\includegraphics[scale=0.075]{phone-icon.png}} \small{+55 48 99611-8470} \\ \hspace{0pt} \\
   \raisebox{-.2\height}{\includegraphics[scale=0.075]{email-icon.png}}
   \small{brunoeiterer@gmail.com} \\ \hspace{0pt} \\
@@ -188,16 +188,23 @@
  \begin{minipage}{0.3\textwidth}
    \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgblkcircle$ \\  \footnotesize{Avançado}
  \end{minipage} \\ \hspace{0pt} \\
+
+ \begin{minipage}{0.65\textwidth}
+	\small{C++}
+  \end{minipage}
+  \begin{minipage}{0.3\textwidth}
+	\centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Intermediário}
+  \end{minipage} \\ \hspace{0pt} \\
+
+  \begin{minipage}{0.65\textwidth}
+	\small{Java}
+  \end{minipage}
+  \begin{minipage}{0.3\textwidth}
+	\centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Intermediário}
+  \end{minipage} \\ \hspace{0pt} \\
  
   \begin{minipage}{0.65\textwidth}
    \small{Python}
- \end{minipage}
- \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Básico}
- \end{minipage} \\ \hspace{0pt} \\
- 
- \begin{minipage}{0.65\textwidth}
-   \small{C++}
  \end{minipage}
  \begin{minipage}{0.3\textwidth}
    \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Básico}
@@ -215,13 +222,6 @@
   \end{minipage}
   \begin{minipage}{0.3\textwidth}
 	\centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Básico}
-  \end{minipage} \\ \hspace{0pt} \\
-
-  \begin{minipage}{0.65\textwidth}
-    \small{Java}
-  \end{minipage}
-  \begin{minipage}{0.3\textwidth}
-    \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Básico}
   \end{minipage} \\ \hspace{0pt} \\
 
   \begin{minipage}{0.65\textwidth}
