Add freelance experience

--- a/CV-portugues.tex
+++ b/CV-portugues.tex
@@ -63,10 +63,26 @@
     \item \normalsize{Desenvolvimento de Software Embarcado para soluções de pagamento em ambiente Linux e Android nas linguagens C, C++ e Java}
     \item \normalsize{Desenvolvimento de aplicativos Desktop em C\#/.NET e WPF}
     \item \normalsize{Desenvolvimento de aplicações Web para JIRA e Confluence em Java com Spring e Spring Boot}
-    \item \normalsize{Todas as atividades foram realizadas utilizando Scrum no gerenciamento}
   \end{itemize}
 }
 \end{minipage} \\ \\
+
+\begin{minipage}[t]{0.2\textwidth}
+  \large{09/2020 - \\ 01/2021}
+  \end{minipage}
+  \begin{minipage}[t]{0.8\textwidth}
+  {
+    \setlength{\parskip}{5.5pt}
+    \Large{\textbf{Freelance - São Paulo}}
+  
+    \large{\textit{Desenvolvedor de Software}}
+    \begin{itemize}
+      \item \normalsize{Desenvolvimento de Aplicação Desktop para apuração de resultado de MPE em Java e JavaFX}
+      \item \normalsize{Implementação do Controle de Patrimônio, Plano de Contas, Apuração de Resultado mensal e anual, Comparação de Resultados}
+      \item \normalsize{Implementação de impressão ou exportação do resultado para Excel e PDF}
+    \end{itemize}
+  }
+  \end{minipage} \\ \\
 
 \begin{minipage}[t]{0.2\textwidth}
 \large{04/2018 - \\ 02/2019}
@@ -82,8 +98,6 @@
   \begin{itemize}
     \item \normalsize{Implementação de um protótipo do protocolo EtherCAT em linguagem C, rodando tanto em Linux como Bare-Metal}
     \item \normalsize{Implementação de códigos de teste em Python}
-    \item \normalsize{Integração do protocolo no código existente com sucesso}
-    \item \normalsize{Todas as atividades foram realizadas utilizando Scrum no gerenciamento}
   \end{itemize}
 }
 \end{minipage} \\ \\
@@ -98,15 +112,12 @@
   
   \large{\textbf{Membro do projeto Floripa-Sat}}
   
-  \large{Floripa-sat é um projeto com objetivo de desenvolver o primeiro nanossatélite do tipo Cubesat desenvolvido por estudantes no Brasil}
+  \large{Primeiro nanossatélite do tipo Cubesat desenvolvido por estudantes no Brasil}
   
   \large{\textit{Estagiário no time de energia}}
 }
 \begin{itemize}
   \item \normalsize{Desenvolvimento do firmware para o microcontrolador e diversos outros circuitos integrados em linguagem C}
-  \item Desenvolvimento do controle de temperatura para as baterias do nanossatélite
-  \item Desenvolvimento de circuitos de medição de corrente e tensão utilizando amplificadores e ADCs
-  \item Implementação de conversores chaveados para elevação ou diminuição de tensão
 \end{itemize}
   
 \end{minipage}
@@ -239,6 +250,41 @@
  \begin{minipage}{0.3\textwidth}
    \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgblkcircle$ \\  \footnotesize{Avançado}
  \end{minipage} \\ \hspace{0pt} \\
+
+ \begin{minipage}{0.65\textwidth}
+  \small{JIRA}
+ \end{minipage}
+ \begin{minipage}{0.3\textwidth}
+  \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgblkcircle$ \\  \footnotesize{Avançado}
+ \end{minipage} \\ \hspace{0pt} \\
+
+ \begin{minipage}{0.65\textwidth}
+  \small{Confluence}
+ \end{minipage}
+ \begin{minipage}{0.3\textwidth}
+  \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgblkcircle$ \\  \footnotesize{Avançado}
+ \end{minipage} \\ \hspace{0pt} \\
+
+ \begin{minipage}{0.65\textwidth}
+  \small{Scrum}
+ \end{minipage}
+ \begin{minipage}{0.3\textwidth}
+  \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgblkcircle$ \\  \footnotesize{Avançado}
+ \end{minipage} \\ \hspace{0pt} \\
+
+ \begin{minipage}{0.65\textwidth}
+  \small{MS Office}
+\end{minipage}
+\begin{minipage}{0.3\textwidth}
+  \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{\mbox{Intermediário}}
+\end{minipage} \\ \hspace{0pt} \\
+
+\begin{minipage}{0.65\textwidth}
+  \small{\LaTeX}
+\end{minipage}
+\begin{minipage}{0.3\textwidth}
+  \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{\mbox{Intermediário}}
+\end{minipage} \\ \hspace{0pt} \\
  
  \begin{minipage}{0.65\textwidth}
    \small{ClearCase}
@@ -249,27 +295,6 @@
 
  \begin{minipage}{0.65\textwidth}
    \small{SVN}
- \end{minipage}
- \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Básico}
- \end{minipage} \\ \hspace{0pt} \\
- 
- \begin{minipage}{0.65\textwidth}
-   \small{MS Office}
- \end{minipage}
- \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{\mbox{Intermediário}}
- \end{minipage} \\ \hspace{0pt} \\
- 
- \begin{minipage}{0.65\textwidth}
-   \small{\LaTeX}
- \end{minipage}
- \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{\mbox{Intermediário}}
- \end{minipage} \\ \hspace{0pt} \\
- 
- \begin{minipage}{0.65\textwidth}
-   \small{Simulink}
  \end{minipage}
  \begin{minipage}{0.3\textwidth}
    \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Básico}
