--- a/CV-english.tex
+++ b/CV-english.tex
@@ -63,10 +63,26 @@
         \item \normalsize{Embedded Software development for payment solutions in Linux and Android environments using C, C++ and Java}
         \item \normalsize{Desktop applications development in C\#/.NET and WPF}
         \item \normalsize{Web applications development for JIRA and Confluence in Java, Spring and Spring Boot}
-        \item \normalsize{All activities were perfomed under Scrum methodology}
       \end{itemize}
     }
   \end{minipage} \\ \\
+
+  \begin{minipage}[t]{0.2\textwidth}
+    \large{09/2020 - \\ 01/2021}
+    \end{minipage}
+    \begin{minipage}[t]{0.8\textwidth}
+    {
+      \setlength{\parskip}{5.5pt}
+      \Large{\textbf{Freelance - São Paulo}}
+    
+      \large{\textit{Desenvolvedor de Software}}
+      \begin{itemize}
+        \item \normalsize{Development of Desktop Application for results calculation of small companies in Java and JavaFX}
+        \item \normalsize{Implementation of Patrimony Control, Chart of Accounts, monthly and yearly Results Calculation, Comparison of Results}
+        \item \normalsize{Implementation of printing and exporting the results to Excel and PDF}
+      \end{itemize}
+    }
+    \end{minipage} \\ \\
 
 	\begin{minipage}[t]{0.2\textwidth}
 	\large{04/2018 - \\ 02/2019}
@@ -82,8 +98,6 @@
 	  \begin{itemize}
 	    \item \normalsize{Implementation of an EtherCAT protocol prototype in C, both in Linux and Bare-Metal}
 	    \item \normalsize{Implementation of test code in Python}
-	    \item \normalsize{Succesful integration of the protocol with existing code}
-	    \item \normalsize{Development of getting started tutorials for new team members}
 	  \end{itemize}
 	}
 \end{minipage} \\ \\
@@ -98,15 +112,12 @@
   
   \large{\textbf{Floripa-Sat project team member}}
   
-  \large{Floripa-Sat is a project whose objective is developing the first Cubesat nanosatellite completely developed by students in Brazil}
+  \large{First Cubesat nanosatellite completely developed by students in Brazil}
   
   \large{\textit{Intern in the Energy Power System}}
 }
 \begin{itemize}
   \item \normalsize{Development of the firmware for the microcontroller and several other integrated circuits in C}
-  \item Development of the temperature control system for the nanosatellite batteries.
-  \item Development of the voltage and current measurement circuits using amplifiers and ADCs
-  \item Implementation of buck and boost switch-mode converters
 \end{itemize}
   
 \end{minipage}
@@ -232,13 +243,48 @@
   \end{minipage} \\ \hspace{0pt} \\
  
   \Large{\textbf{Skills}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \hspace{0pt} \\
-  
+
  \begin{minipage}{0.65\textwidth}
-   \small{Git}
- \end{minipage}
- \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgblkcircle$ \\  \footnotesize{Advanced}
- \end{minipage} \\ \hspace{0pt} \\
+  \small{Git}
+\end{minipage}
+\begin{minipage}{0.3\textwidth}
+  \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgblkcircle$ \\  \footnotesize{Advanced}
+\end{minipage} \\ \hspace{0pt} \\
+
+\begin{minipage}{0.65\textwidth}
+  \small{JIRA}
+\end{minipage}
+\begin{minipage}{0.3\textwidth}
+  \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgblkcircle$ \\  \footnotesize{Advanced}
+\end{minipage} \\ \hspace{0pt} \\
+
+\begin{minipage}{0.65\textwidth}
+  \small{Confluence}
+\end{minipage}
+\begin{minipage}{0.3\textwidth}
+  \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgblkcircle$ \\  \footnotesize{Advanced}
+\end{minipage} \\ \hspace{0pt} \\
+
+\begin{minipage}{0.65\textwidth}
+  \small{Scrum}
+\end{minipage}
+\begin{minipage}{0.3\textwidth}
+  \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgblkcircle$ \\  \footnotesize{Advanced}
+\end{minipage} \\ \hspace{0pt} \\
+
+ \begin{minipage}{0.65\textwidth}
+  \small{MS Office}
+\end{minipage}
+\begin{minipage}{0.3\textwidth}
+  \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{\mbox{Intermediate}}
+\end{minipage} \\ \hspace{0pt} \\
+
+\begin{minipage}{0.65\textwidth}
+  \small{\LaTeX}
+\end{minipage}
+\begin{minipage}{0.3\textwidth}
+  \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{\mbox{Intermediate}}
+\end{minipage} \\ \hspace{0pt} \\
  
  \begin{minipage}{0.65\textwidth}
    \small{ClearCase}
@@ -252,27 +298,6 @@
  \end{minipage}
  \begin{minipage}{0.3\textwidth}
   \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
- \end{minipage} \\ \hspace{0pt} \\
- 
- \begin{minipage}{0.65\textwidth}
-   \small{MS Office}
- \end{minipage}
- \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{\mbox{Intermediate}}
- \end{minipage} \\ \hspace{0pt} \\
- 
- \begin{minipage}{0.65\textwidth}
-   \small{\LaTeX}
- \end{minipage}
- \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{\mbox{Intermediate}}
- \end{minipage} \\ \hspace{0pt} \\
- 
- \begin{minipage}{0.65\textwidth}
-   \small{Simulink}
- \end{minipage}
- \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
  \end{minipage} \\ \hspace{0pt} \\
  
   \begin{minipage}{0.65\textwidth}
