Add Gertec promotion

--- a/CV-english.tex
+++ b/CV-english.tex
@@ -58,7 +58,8 @@
       \setlength{\parskip}{5.5pt}
       \Large{\textbf{Gertec - São Paulo}}
     
-      \large{\textit{Software Developer}}
+      \large{\textit{Software Developer}} \\
+      \large{\textit{Middle Software Developer}}
       \begin{itemize}
         \item \normalsize{Embedded Software development for payment solutions in Linux and Android environments using C, C++ and Java}
         \item \normalsize{Desktop applications development in C\#/.NET and WPF}
