Add Make to Skills

--- a/CV-portugues.tex
+++ b/CV-portugues.tex
@@ -274,6 +274,13 @@
  \end{minipage} \\ \hspace{0pt} \\
 
  \begin{minipage}{0.65\textwidth}
+  \small{Make}
+\end{minipage}
+\begin{minipage}{0.3\textwidth}
+  \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{\mbox{Intermediário}}
+\end{minipage} \\ \hspace{0pt} \\
+
+ \begin{minipage}{0.65\textwidth}
   \small{MS Office}
 \end{minipage}
 \begin{minipage}{0.3\textwidth}
@@ -286,13 +293,6 @@
 \begin{minipage}{0.3\textwidth}
   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{\mbox{Intermediário}}
 \end{minipage} \\ \hspace{0pt} \\
- 
- \begin{minipage}{0.65\textwidth}
-   \small{ClearCase}
- \end{minipage}
- \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Básico}
- \end{minipage} \\ \hspace{0pt} \\
 
  \begin{minipage}{0.65\textwidth}
    \small{SVN}
