--- a/CV-english.tex
+++ b/CV-english.tex
@@ -273,6 +273,13 @@
   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgblkcircle$ \\  \footnotesize{Advanced}
 \end{minipage} \\ \hspace{0pt} \\
 
+\begin{minipage}{0.65\textwidth}
+  \small{Make}
+\end{minipage}
+\begin{minipage}{0.3\textwidth}
+  \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Intermediate}
+\end{minipage} \\ \hspace{0pt} \\
+
  \begin{minipage}{0.65\textwidth}
   \small{MS Office}
 \end{minipage}
@@ -286,13 +293,6 @@
 \begin{minipage}{0.3\textwidth}
   \centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{\mbox{Intermediate}}
 \end{minipage} \\ \hspace{0pt} \\
- 
- \begin{minipage}{0.65\textwidth}
-   \small{ClearCase}
- \end{minipage}
- \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
- \end{minipage} \\ \hspace{0pt} \\
 
  \begin{minipage}{0.65\textwidth}
   \small{SVN}
