Add RDI Sofware experience

--- a/CV-english.tex
+++ b/CV-english.tex
@@ -51,7 +51,22 @@
   \Large{\textbf{Experiences}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \\
   
   \begin{minipage}[t]{0.2\textwidth}
-    \large{07/2019 - \\ Present}
+  	\large{04/2021 - \\ Present}
+  \end{minipage}
+  \begin{minipage}[t]{0.8\textwidth}
+  	{
+  		\setlength{\parskip}{5.5pt}
+  		\Large{\textbf{RDI Software - São Paulo}}
+  		
+  		\large{\textit{Software Development Consultant}}
+  		\begin{itemize}
+  			\item \normalsize{Web applications development for McDonald's restaurants in C\#, C++ and C.}
+  		\end{itemize}
+  	}
+  \end{minipage} \\ \\
+  
+  \begin{minipage}[t]{0.2\textwidth}
+    \large{07/2019 - \\ 04/2021}
     \end{minipage}
     \begin{minipage}[t]{0.8\textwidth}
     {
@@ -80,7 +95,6 @@
       \begin{itemize}
         \item \normalsize{Development of Desktop Application for results calculation of small companies in Java and JavaFX}
         \item \normalsize{Implementation of Patrimony Control, Chart of Accounts, monthly and yearly Results Calculation, Comparison of Results}
-        \item \normalsize{Implementation of printing and exporting the results to Excel and PDF}
       \end{itemize}
     }
     \end{minipage} \\ \\
@@ -92,8 +106,6 @@
 	{
 	  \setlength{\parskip}{5.5pt}
 	  \Large{\textbf{ASML - The Netherlands}}
-	  
-	  \large{Worldwide leader in lithography machines, used in integrated circuits manufacturing}
 	  
 	  \large{\textit{Embedded Software Intern in the Motion Control team}}
 	  \begin{itemize}
@@ -112,8 +124,6 @@
   \Large{\textbf{Embedded Systems Group - UFSC}}
   
   \large{\textbf{Floripa-Sat project team member}}
-  
-  \large{First Cubesat nanosatellite completely developed by students in Brazil}
   
   \large{\textit{Intern in the Energy Power System}}
 }
@@ -162,7 +172,7 @@
 \begin{minipage}[t]{0.25\textwidth}
   \raggedright
   \Large{\textbf{Personal Information}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \hspace{0pt} \\
-  \raisebox{-.2\height}{\includegraphics[scale=0.075]{home-icon.png}} \small{São Paulo, SP, Brazil} \\ \hspace{0pt} \\
+  \raisebox{-.2\height}{\includegraphics[scale=0.075]{home-icon.png}} \small{São José dos Campos, SP, Brazil} \\ \hspace{0pt} \\
   \raisebox{-.2\height}{\includegraphics[scale=0.075]{phone-icon.png}} \small{+55 48 99611-8470} \\ \hspace{0pt} \\
   \raisebox{-.2\height}{\includegraphics[scale=0.075]{email-icon.png}}
   \small{brunoeiterer@gmail.com} \\ \hspace{0pt} \\
@@ -209,6 +219,13 @@
  \end{minipage} \\ \hspace{0pt} \\
 
   \begin{minipage}{0.65\textwidth}
+	\small{C\# .NET}
+  \end{minipage}
+  \begin{minipage}{0.3\textwidth}
+	\centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Intermediate}
+  \end{minipage} \\ \hspace{0pt} \\
+
+  \begin{minipage}{0.65\textwidth}
 	\small{Java}
   \end{minipage}
   \begin{minipage}{0.3\textwidth}
@@ -217,13 +234,6 @@
  
   \begin{minipage}{0.65\textwidth}
    \small{Python}
- \end{minipage}
- \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
- \end{minipage} \\ \hspace{0pt} \\
- 
-  \begin{minipage}{0.65\textwidth}
-   \small{C\# .NET}
  \end{minipage}
  \begin{minipage}{0.3\textwidth}
    \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
