--- a/CV-portugues.tex
+++ b/CV-portugues.tex
@@ -52,7 +52,21 @@
 \Large{\textbf{Experiência}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \\
 
 \begin{minipage}[t]{0.2\textwidth}
-\large{07/2019 - \\ Atualmente}
+	\large{04/2021 - \\ Atualmente}
+\end{minipage}
+\begin{minipage}[t]{0.8\textwidth}
+	{
+		\setlength{\parskip}{5.5pt}
+		\Large{\textbf{RDI Software - São Paulo}} \\
+		\large{\textit{Consultor de Desenvolvimento de Software}}
+		\begin{itemize}
+			\item \normalsize{Desenvolvimento de aplicações web para restaurantes McDonald's em C\#, C++ e C}
+		\end{itemize}
+	}
+\end{minipage} \\ \\
+
+\begin{minipage}[t]{0.2\textwidth}
+\large{07/2019 - \\ 04/2021}
 \end{minipage}
 \begin{minipage}[t]{0.8\textwidth}
 {
@@ -80,7 +94,6 @@
     \begin{itemize}
       \item \normalsize{Desenvolvimento de Aplicação Desktop para apuração de resultado de MPE em Java e JavaFX}
       \item \normalsize{Implementação do Controle de Patrimônio, Plano de Contas, Apuração de Resultado mensal e anual, Comparação de Resultados}
-      \item \normalsize{Implementação de impressão ou exportação do resultado para Excel e PDF}
     \end{itemize}
   }
   \end{minipage} \\ \\
@@ -92,8 +105,6 @@
 {
   \setlength{\parskip}{5.5pt}
   \Large{\textbf{ASML - Holanda}}
-  
-  \large{Líder mundial no desenvolvimento de máquinas litográficas, utilizadas na fabricação de chips}
   
   \large{\textit{Estagiário de Software Embarcado no time de Motion Control}}
   \begin{itemize}
@@ -112,8 +123,6 @@
   \Large{\textbf{Grupo de Sistemas Embarcados - UFSC}}
   
   \large{\textbf{Membro do projeto Floripa-Sat}}
-  
-  \large{Primeiro nanossatélite do tipo Cubesat desenvolvido por estudantes no Brasil}
   
   \large{\textit{Estagiário no time de energia}}
 }
@@ -162,7 +171,7 @@
 \begin{minipage}[t]{0.25\textwidth}
   \raggedright
   \Large{\textbf{Informações Pessoais}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \hspace{0pt} \\
-  \raisebox{-.2\height}{\includegraphics[scale=0.075]{home-icon.png}} \small{São Paulo, SP, Brasil} \\ \hspace{0pt} \\
+  \raisebox{-.2\height}{\includegraphics[scale=0.075]{home-icon.png}} \small{São José dos Campos, SP, Brasil} \\ \hspace{0pt} \\
   \raisebox{-.2\height}{\includegraphics[scale=0.075]{phone-icon.png}} \small{+55 48 99611-8470} \\ \hspace{0pt} \\
   \raisebox{-.2\height}{\includegraphics[scale=0.075]{email-icon.png}}
   \small{brunoeiterer@gmail.com} \\ \hspace{0pt} \\
@@ -209,6 +218,13 @@
   \end{minipage} \\ \hspace{0pt} \\
 
   \begin{minipage}{0.65\textwidth}
+	\small{C\# .NET}
+  \end{minipage}
+  \begin{minipage}{0.3\textwidth}
+		\centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Intermediário}
+  \end{minipage} \\ \hspace{0pt} \\
+
+  \begin{minipage}{0.65\textwidth}
 	\small{Java}
   \end{minipage}
   \begin{minipage}{0.3\textwidth}
@@ -217,13 +233,6 @@
  
   \begin{minipage}{0.65\textwidth}
    \small{Python}
- \end{minipage}
- \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Básico}
- \end{minipage} \\ \hspace{0pt} \\
- 
-  \begin{minipage}{0.65\textwidth}
-   \small{C\# .NET}
  \end{minipage}
  \begin{minipage}{0.3\textwidth}
    \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Básico}
